{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 83,
  "lineage": "4105e967-3731-c57d-50ee-d430fcc13ce3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547456401969:vpc/vpc-03cee72c695e3d083",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c19a7d7225e31388",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8170a0e4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cee72c695e3d083",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06662ffc81f6ecb27",
            "owner_id": "547456401969",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:loadbalancer/app/px-apps-alb/fe61401719b86403",
            "arn_suffix": "app/px-apps-alb/fe61401719b86403",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "px-apps-alb-1022760612.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:547456401969:loadbalancer/app/px-apps-alb/fe61401719b86403",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "px-apps-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-076776d40a06c9506"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0712fa1acf355a74c"
              },
              {
                "subnet_id": "subnet-076132c779edfec47"
              },
              {
                "subnet_id": "subnet-08f4512978b554741"
              },
              {
                "subnet_id": "subnet-094e3ea14d90abf89"
              },
              {
                "subnet_id": "subnet-09f9d40f53663612d"
              },
              {
                "subnet_id": "subnet-0b277ed0e6993e2f6"
              }
            ],
            "subnets": [
              "subnet-0712fa1acf355a74c",
              "subnet-076132c779edfec47",
              "subnet-08f4512978b554741",
              "subnet-094e3ea14d90abf89",
              "subnet-09f9d40f53663612d",
              "subnet-0b277ed0e6993e2f6"
            ],
            "tags": {
              "Name": "px-apps-alb",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "tags_all": {
              "Name": "px-apps-alb",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "vpc_id": "vpc-03cee72c695e3d083",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:loadbalancer/app/px-apps-alb/fe61401719b86403"
          },
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener/app/px-apps-alb/fe61401719b86403/080bdd756e2d56c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener/app/px-apps-alb/fe61401719b86403/080bdd756e2d56c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:loadbalancer/app/px-apps-alb/fe61401719b86403",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener/app/px-apps-alb/fe61401719b86403/080bdd756e2d56c7"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.lb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener/app/px-apps-alb/fe61401719b86403/041c37407d988412",
            "certificate_arn": "arn:aws:acm:us-east-1:547456401969:certificate/f54cfc40-f498-42b1-adcc-975b6bd5dce7",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "PX Platform Gateway - No Service Match",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener/app/px-apps-alb/fe61401719b86403/041c37407d988412",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:loadbalancer/app/px-apps-alb/fe61401719b86403",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener/app/px-apps-alb/fe61401719b86403/041c37407d988412"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.lb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:targetgroup/cmdr-be-dev/0b3538517770f111",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener-rule/app/px-apps-alb/fe61401719b86403/041c37407d988412/dbfcd4dd2e7b2d70",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*",
                      "/auth/*",
                      "/docs",
                      "/health",
                      "/openapi.json"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener-rule/app/px-apps-alb/fe61401719b86403/041c37407d988412/dbfcd4dd2e7b2d70",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener/app/px-apps-alb/fe61401719b86403/041c37407d988412",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener-rule/app/px-apps-alb/fe61401719b86403/041c37407d988412/dbfcd4dd2e7b2d70"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.backend",
            "aws_security_group.lb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:targetgroup/cmdr-fe-dev/865c22671c0a1b85",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener-rule/app/px-apps-alb/fe61401719b86403/041c37407d988412/8a9a94446974e1ea",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener-rule/app/px-apps-alb/fe61401719b86403/041c37407d988412/8a9a94446974e1ea",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener/app/px-apps-alb/fe61401719b86403/041c37407d988412",
            "priority": 20,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:listener-rule/app/px-apps-alb/fe61401719b86403/041c37407d988412/8a9a94446974e1ea"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.frontend",
            "aws_security_group.lb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:targetgroup/cmdr-be-dev/0b3538517770f111",
            "arn_suffix": "targetgroup/cmdr-be-dev/0b3538517770f111",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:547456401969:targetgroup/cmdr-be-dev/0b3538517770f111",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:547456401969:loadbalancer/app/px-apps-alb/fe61401719b86403"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cmdr-be-dev",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cmdr-be-dev-tg",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "tags_all": {
              "Name": "cmdr-be-dev-tg",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03cee72c695e3d083"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:targetgroup/cmdr-be-dev/0b3538517770f111"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:targetgroup/cmdr-fe-dev/865c22671c0a1b85",
            "arn_suffix": "targetgroup/cmdr-fe-dev/865c22671c0a1b85",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:547456401969:targetgroup/cmdr-fe-dev/865c22671c0a1b85",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:547456401969:loadbalancer/app/px-apps-alb/fe61401719b86403"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cmdr-fe-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cmdr-fe-dev-tg",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "tags_all": {
              "Name": "cmdr-fe-dev-tg",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03cee72c695e3d083"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:547456401969:targetgroup/cmdr-fe-dev/865c22671c0a1b85"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547456401969:security-group/sg-083eaab4538844e86",
            "description": "Allow traffic from LB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083eaab4538844e86",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076776d40a06c9506"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "px-apps-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "547456401969",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "px-apps-ecs-tasks-sg",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "tags_all": {
              "Name": "px-apps-ecs-tasks-sg",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cee72c695e3d083"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "547456401969",
            "id": "sg-083eaab4538844e86",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547456401969:security-group/sg-076776d40a06c9506",
            "description": "Allow HTTP/HTTPS to Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076776d40a06c9506",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "px-apps-lb-sg",
            "name_prefix": "",
            "owner_id": "547456401969",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "px-apps-lb-sg",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "tags_all": {
              "Name": "px-apps-lb-sg",
              "app": "commander",
              "env": "prod",
              "managed": "terraform",
              "owner": "Jtoro",
              "project": "project-x",
              "type": "business"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cee72c695e3d083"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "547456401969",
            "id": "sg-076776d40a06c9506",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}